[package]
name = "fuwa"
version = "0.1.0"
authors = ["Zerve0 <zerve0@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.9.3"
pixels = "0.2.0"
rayon = "1.4.0"
winit = "0.22.2"
winit_input_helper = "0.7.0"
raw-window-handle = "0.3.3"
lazy_static = "1.4.0"
hashbrown = "0.8.2"
image = "0.23.9"
itertools = "0.9.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "raster_bench"
harness = false