[package]
name = "fuwa"
version = "0.1.0"
authors = ["Zerve0 <zerve0@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.9.4"
pixels = "0.2.0"
rayon = "1.4.0"
winit = "0.22.2"
winit_input_helper = "0.7.0"
raw-window-handle = "0.3.3"
lazy_static = "1.4.0"
image = "0.23.9"
optick = "1.3.1"
once_cell = "1.4.1"
wide = "0.5.5"
bytemuck = "1.4.1"
slab = "0.4.2"
type-map = "0.3.0"
parking_lot = "0.11.0"
bumpalo = "3.4.0"

[dev-dependencies]
criterion = "0.3.3"

[[bench]]
name = "raster_bench"
harness = false